--- a/WebService/appsettings.json
+++ b/WebService/appsettings.json
@@ -10,7 +10,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=password;Database=WebServiceDB;",
     "MovieContext": "Host=localhost;Port=5432;Username=postgres;Password=password;Database=WebServiceDB;",
-    "UserContext": "Host=localhost;Port=5432;Username=postgres;Password=password;Database=WebServiceDB;"
+    "UserContext": "Host=john.db.elephantsql.com;Port=5432;Username=hrwdoqhu;Password=kBxCWgZuubmN_lsiKaH8EucnCs0JO8XY;Database=hrwdoqhu;"
   },
   "Jwt": {
     "Key": "sdfsdfsjd6f7gsdyfssclfsdfbuidfs9ggdfsdbf",
